# glow_patch

./: README.md
patch/glow_tools_loader/: CMakeLists.txt
patch/lenet/: 0.h  3.h  4.h  8.h  main.cpp
patch/lenet/headers/: 1.h  2.h  5.h  6.h  7.h  9.h
